# troc

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  cog.toml  tarpaulin.toml
.cargo/: mutants.toml
.github/: mutation_testing.yml
.github/backup/: coverage.yml  mutation_testing.yml  pages.yml
.github/pages/: index.html
.github/utils/: gen_mutation_report.sh  gen_mutation_report.sh.back
.github/workflows/: ci.yml  coverage.yml  mutation_testing.yml  pages.yml
troc/: CHANGELOG.md  Cargo.toml
troc-cdr/: Cargo.toml  README.md
troc-core/: CHANGELOG.md  Cargo.toml
troc-core/benches/: decode.rs  encode.rs  main.rs
troc-core/src/: lib.rs
troc-core/src/common/: cache_change.rs  counter.rs  effect.rs  error.rs  mod.rs  qos_matcher.rs  reader_proxy.rs  writer_proxy.rs
troc-core/src/discovery/: disc.rs  discovered_reader_data.rs  discovered_writer_data.rs  mod.rs
troc-core/src/key/: keyed.rs  mod.rs
troc-core/src/messages/: header.rs  message.rs  message_factory.rs  mod.rs  receiver.rs
troc-core/src/messages/submessages/: mod.rs  submessage.rs  submessage_content.rs  submessage_header.rs
troc-core/src/publication/: historycache.rs  mod.rs  writer.rs
troc-core/src/subscription/: change_from_writer.rs  historycache.rs  mod.rs  reader.rs
troc-core/src/types/: builtin_endpoint_qos.rs  builtin_endpoint_set.rs  builtin_topic_key.rs  change_count.rs  change_for_reader_status_kind.rs  change_from_writer_status_kind.rs  change_kind.rs  checksum.rs  content_filter_info.rs  content_filter_property.rs  count.rs  deadline_qos.rs  destination_order_qos.rs  domain_id.rs  domain_tag.rs  durability_qos.rs  duration.rs  duration_kind.rs  entity_name.rs  filter_result.rs  filter_signature.rs  filter_signature_sequence.rs  fragment_number.rs  fragment_number_set.rs  groupd_digest.rs  guid.rs  history_qos.rs  inline_qos.rs  instance_handle.rs  key_hash.rs  key_hash_prefix.rs  key_hash_suffix.rs  lifespan_qos.rs  liveliness_qos.rs  locator.rs  locator_kind.rs  locator_list.rs  message_length.rs  mod.rs  original_writer_info.rs  (+30 more)
troc-derive/: CHANGELOG.md  Cargo.toml
troc-derive/src/: lib.rs
troc-derive/src/dds_type/: mod.rs
troc-derive/tests/: main.rs
troc/benches/: benchmark.rs  latency.rs  one_writer_one_reader_dds_exchange.rs  one_writer_two_readers_dds_exchange.rs  udp_exchange.rs
troc/benches/common/: mod.rs  resources.rs
troc/examples/: read.rs  write.rs
troc/examples/common/: mod.rs
troc/src/: lib.rs
troc/src/common/: mod.rs
troc/src/discovery/: disc.rs  mod.rs
troc/src/domain/: configuration.rs  entity_identifier.rs  mod.rs  participant.rs  participant_listener.rs  udp_helper.rs
troc/src/infrastructure/: consistency_checker.rs  mod.rs  qos_policy.rs
troc/src/io/: ipc_wire.rs  mod.rs  timer.rs  udpv4_wire.rs  wire.rs  wire_factory.rs
troc/src/publication/: datawriter.rs  mod.rs  publisher.rs  writer_adapter.rs
troc/src/serde/: deserialize_actor.rs  mod.rs  serialize_actor.rs
troc/src/subscription/: condition.rs  data_sample.rs  datareader.rs  instance_state_kind.rs  mod.rs  reader_adapters.rs  sample_info.rs  sample_state_kind.rs  subscriber.rs  view_state_kind.rs
troc/src/time/: mod.rs  timer.rs
troc/src/topic/: mod.rs  topic.rs
troc/src/wires/: error.rs  mod.rs  udpv4_wire.rs  wire.rs  wire_factory.rs
troc/tests/: README.md  tests.rs
troc/tests/back/qos_basic/: mod.rs  qos_basic.rs  qos_basic2.rs
troc/tests/back/qos_implemented/: deadline.rs  lifespan.rs  liveliness.rs  mod.rs
troc/tests/back/qos_scenari/: best_effort_keep_all_volatile.rs  best_effort_keep_last_volatile.rs  mod.rs  reliable_keep_all_transient_local.rs  reliable_keep_all_volatile.rs  reliable_keep_last_transient_local.rs  reliable_keep_last_volatile.rs
troc/tests/communication/: keyed.rs  mod.rs  reliability.rs
troc/tests/discovery/: basic.rs  complex.rs  matching.rs  mod.rs
troc/tests/fixture/: fixtures.rs  mod.rs
