[package]
name = "troc"
version = "0.1.0"
description = "Tokio DDS implementation"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "one_writer_one_reader_dds_exchange"
path = "benches/one_writer_one_reader_dds_exchange.rs"

[[bin]]
name = "one_writer_two_readers_dds_exchange"
path = "benches/one_writer_two_readers_dds_exchange.rs"

[[bin]]
name = "udp_exchange"
path = "benches/udp_exchange.rs"

[[bench]]
harness = false
name = "latency"

[dependencies]
md5.workspace = true
async-trait = "0.1.83"
bytes = "1.10.1"
chrono = { version = "0.4.41", default-features = false, features = [
  "alloc",
  "clock",
  "now",
  "std",
] }
troc-core = { path = "../troc-core" }
troc-derive = { path = "../troc-derive" }
envious = "0.2.2"
futures = "0.3.31"
local-ip-address = "0.6.5"
serde = "1.0.219"
socket2 = "0.6.0"
thiserror = "1.0.38"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
governor = "0.10.1"
itertools = "0.14.0"
kameo = "0.19.2"

[dev-dependencies]
anyhow = "1.0.100"
proptest = "1.7.0"
rstest = "0.25.0"
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.19", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }
regex = "1.8.4"
clap = { version = "4.3.2", features = ["derive", "env"] }
ctrlc = "3.2.1"
criterion = { version = "0.5.1", features = ["async_tokio"] }
pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }

[profile.release]
lto = "fat"

[profile.bench]
debug = true
